--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".SignAcitvity"></activity>
+        <activity android:name=".SignAcitvity" />
+        <activity android:name=".HomeActivity"></activity>
     </application>
 
 </manifest>
