--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".App"
+        android:name=".common.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -40,7 +40,10 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".SignAcitvity" />
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".Splash" />
+        <activity android:name=".FoundationGrid" />
+        <activity android:name=".DonateActivity"></activity>
     </application>
 
 </manifest>
