--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'com.roughike:bottom-bar:2.0.2'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
 }
