--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity android:name=".MainActivity"
             android:theme="@style/Theme.Design.NoActionBar">
         </activity>
-      
+
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
@@ -61,7 +61,8 @@
             android:name=".MakeDonActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".LotteryActivity" />
-        <activity android:name=".LotteryListActivity"></activity>
+        <activity android:name=".LotteryListActivity" />
+        <activity android:name=".CardActivity"></activity>
     </application>
 
 </manifest>
