added crop activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".common.App"
@@ -59,9 +60,13 @@
         <activity
             android:name=".MakeDonActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".LotteryActivity" />
-        <activity android:name=".LotteryListActivity" />
+        <activity android:name=".LotteryActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".LotteryListActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".CardActivity"></activity>
+        <activity android:name=".CropActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
     </application>
 
 </manifest>
