--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'me.relex:circleindicator:1.2.2@aar'
+    compile 'com.albinmathew:photo-crop-library:1.0.3'
 
 }
