--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
@@ -31,5 +32,11 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'me.relex:circleindicator:1.2.2@aar'
     compile 'com.albinmathew:photo-crop-library:1.0.3'
+}
 
+repositories {
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+}
+dependencies {
+    compile 'com.github.carlonzo.stikkyheader:core:0.0.3-SNAPSHOT'
 }
