--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,6 @@
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -76,7 +75,11 @@
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity
             android:name=".HideReportDialogActivity"
-            android:theme="@style/Theme.AppCompat.Dialog" />
+            android:theme="@style/Theme.AppCompat.Dialog" >
+        </activity>
+        <activity android:name=".ReportDialogActivity"
+            android:theme="@style/Theme.AppCompat.Dialog" >
+        </activity>
     </application>
 
 </manifest>
