--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ repositories {
 }
 dependencies {
     compile 'com.github.carlonzo.stikkyheader:core:0.0.3-SNAPSHOT'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
