--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -138,9 +138,14 @@
             android:name=".fragments.DeleteReportDialogActivity"
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity android:name=".ChooseImageActivity" />
-        <activity android:name=".TestActivity"
-            android:windowSoftInputMode="adjustResize"
-            ></activity>
+        <activity
+            android:name=".TestActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:name=".ConnectionActivity"></activity>
     </application>
 
 </manifest>
